--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
+body{
+    background-image: url("images/bg2.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 #zunanji{
     text-align: center;
-    font-size: 35px;
+    font-size: 47px;
     font-weight: bold;
-    color:burlywood;
+    font-style: italic;
+    color:rgb(255, 172, 65);
 }
 
 #main{
@@ -13,10 +20,14 @@
 #mycanvas{
     padding-left: 0;
     padding-right: 0;
-    background-image: url("images/test.png");
+    background-image: url("images/image.jpg");
     margin-left: auto;
     margin-right: auto;
     display: block;
+}
+
+#nagrada{
+    text-align: center;
 }
 
 #maze_container{
